--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <h1>Bruna Suzuki</h1>
         <img src="../shared/images/profile.png" class="img-circle" width="100px" alt="Bruna">
         <p>
-          I love horseback riding, architecture and photography.
-          Currently studying web development at Le Wagon.        </p>
+          I love horseback riding, architecture and photography.</p>
         <a href="https://www.lewagon.com" target="_blank">
           <i class="btn-blue">Discover Le Wagon</i>
         </a>
