--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Bruna Suzuki</h1>
-        <img src="../shared/images/profile.png" class="img-circle" width="100px" alt="Bruna">
+        <img src="photo (6).jpeg" class="img-circle" width="300px" alt="Bruna">
         <p>
           I enjoy horseback riding, architecture and photography.</p>
         <a href="https://www.lewagon.com" target="_blank">
