--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Bruna Suzuki</h1>
-        <img src="photo (6).jpeg" class="img-circle" width="300px" alt="Bruna">
-        <p>
-          I enjoy horseback riding, architecture and photography.</p>
+        <img src="photo (6).jpeg" class="img-circle" alt="Bruna">
+        <p>I love horseback riding, architecture and photography.
+          Currently studying web development at Le Wagon São Paulo. </p>
         <a href="https://www.lewagon.com" target="_blank">
           <i class="btn-blue">Discover Le Wagon</i>
         </a>
